# ms-project

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
firmware/main/: CMakeLists.txt  Kconfig.projbuild  crypto.c  mesh_main.c  ms_aggregate.c  ms_crypto.c  ms_gpio.c  ms_network.c  network.c
firmware/main/include/: crypto.h  mesh_main.h  ms_aggregate.h  ms_commons.h  ms_crypto.h  ms_gpio.h  ms_network.h  my_commons.h  network.h
udpserver/: CMakeLists.txt  azureserver.c  benchserver.c  udp_network.c  udp_network.h  udpserver.c  udpserver.h
